added stats section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/utilities.css">
     <title>Loruki ¦ Cloud Hosting For Everyone</title>
 </head>
 
@@ -28,7 +29,7 @@
     <section class="showcase">
         <div class="container grid">
             <div class="showcase-text">
-                <h1>Easier Deploymaent</h1>
+                <h1>Easier Deployment</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa adipisci exercitationem, ab et ut, doloribus debitis amet maiores eligendi culpa beatae neque veritatis blanditiis praesentium dolores iure nisi harum impedit?</p>
                 <a href="features.html" class="btn btn-outline">Read More</a>
             </div>
@@ -51,6 +52,35 @@
 
         </div>
 
+    </section>
+
+    <!--Stats-->
+
+    <section class="stats">
+        <div class="container">
+            <h3 class="stats-heading text-center my-1">
+                Welcome to the best platform for building applications of all types with modern architecture and scaling
+            </h3>
+            <div class="grid grid-3 text-center my-4">
+                <div>
+                    <i class="fas fa-server fa-3x"></i>
+                    <h3>10,349,405</h3>
+                    <p class="text-secondary">Deployments</p>
+                </div>
+                <div>
+                    <i class="fas fa-upload fa-3x"></i>
+                    <h3>815 TB</h3>
+                    <p class="text-secondary">Published</p>
+                </div>
+                <div>
+                    <i class="fas fa-project-diagram fa-3x"></i>
+                    <h3>2,309,345</h3>
+                    <p class="text-secondary">Projects</p>
+                </div>
+            </div>
+
+
+        </div>
     </section>
 
 </body>
