--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/utilities.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/utilities.css" />
     <title>Loruki ¦ Cloud Hosting For Everyone</title>
 </head>
 
@@ -29,8 +29,10 @@
     <section class="showcase">
         <div class="container grid">
             <div class="showcase-text">
-                <h1>Easier Deployment</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa adipisci exercitationem, ab et ut, doloribus debitis amet maiores eligendi culpa beatae neque veritatis blanditiis praesentium dolores iure nisi harum impedit?</p>
+                <h1>Easier Deployment!</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa adipisci exercitationem, ab et ut, doloribus debitis amet maiores eligendi culpa beatae neque veritatis blanditiis praesentium dolores iure nisi harum impedit?
+                </p>
                 <a href="features.html" class="btn btn-outline">Read More</a>
             </div>
 
@@ -38,20 +40,18 @@
                 <h2>Request a Demo</h2>
                 <form>
                     <div class="form-control">
-                        <input type="text" name="name" placeholder="Name" required>
+                        <input type="text" name="name" placeholder="Name" required />
                     </div>
                     <div class="form-control">
-                        <input type="text" name="company" placeholder="Company" required>
+                        <input type="text" name="company" placeholder="Company" required />
                     </div>
                     <div class="form-control">
-                        <input type="email" name="email" placeholder="Email" required>
+                        <input type="email" name="email" placeholder="Email" required />
                     </div>
-                    <input type="submit" class="btn btn-primary" value="Send">
+                    <input type="submit" class="btn btn-primary" value="Send" />
                 </form>
             </div>
-
         </div>
-
     </section>
 
     <!--Stats-->
@@ -78,17 +78,15 @@
                     <p class="text-secondary">Projects</p>
                 </div>
             </div>
-
-
         </div>
     </section>
 
     <!-- Cli -->
     <section class="cli">
         <div class="container grid">
-            <img src="images/cli.png" alt="cli">
+            <img src="images/cli.png" alt="cli" />
             <div class="card">
-                <h3>Easy to use,cross platform CLI </h3>
+                <h3>Easy to use,cross platform CLI</h3>
             </div>
             <div class="card">
                 <h3>Deploy in seconds</h3>
@@ -101,47 +99,46 @@
         <div class="container grid">
             <div class="text-center">
                 <h2 class="lg">Extreme Cloud Hosting</h2>
-                <p class="lead my-1">Cloud hosting like youv'e never seen before.Fast efficient and scalable</p>
+                <p class="lead my-1">
+                    Cloud hosting like youv'e never seen before.Fast efficient and scalable
+                </p>
                 <a href="features.html" class="btn btn-dark">Read More</a>
             </div>
 
-            <img src="images/cloud.png" alt="" srcset="">
-
+            <img src="images/cloud.png" alt="" srcset="" />
         </div>
     </section>
 
     <section class="languages">
-        <h2 class="md text-center my-2">
-            Supported Languages
-        </h2>
+        <h2 class="md text-center my-2">Supported Languages</h2>
         <div class="container flex">
             <div class="card">
                 <h4>Node.js</h4>
-                <img src="images/logos/node.png" alt="" srcset="">
+                <img src="images/logos/node.png" alt="" srcset="" />
             </div>
             <div class="card">
                 <h4>Python</h4>
-                <img src="images/logos/python.png" alt="" srcset="">
+                <img src="images/logos/python.png" alt="" srcset="" />
             </div>
             <div class="card">
                 <h4>C#</h4>
-                <img src="images/logos/csharp.png" alt="" srcset="">
+                <img src="images/logos/csharp.png" alt="" srcset="" />
             </div>
             <div class="card">
                 <h4>Ruby</h4>
-                <img src="images/logos/ruby.png" alt="" srcset="">
+                <img src="images/logos/ruby.png" alt="" srcset="" />
             </div>
             <div class="card">
                 <h4>PHP</h4>
-                <img src="images/logos/php.png" alt="" srcset="">
+                <img src="images/logos/php.png" alt="" srcset="" />
             </div>
             <div class="card">
                 <h4>Scala</h4>
-                <img src="images/logos/scala.png" alt="" srcset="">
+                <img src="images/logos/scala.png" alt="" srcset="" />
             </div>
             <div class="card">
                 <h4>Clojure</h4>
-                <img src="images/logos/clojure.png" alt="" srcset="">
+                <img src="images/logos/clojure.png" alt="" srcset="" />
             </div>
         </div>
     </section>
@@ -166,7 +163,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
